Implemented reading goals backend API - tested on postman